--- a/RetoFinal/RetoFinal.csproj
+++ b/RetoFinal/RetoFinal.csproj
@@ -42,7 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AgendaContactos.cs" />
+    <Compile Include="Agenda.cs" />
     <Compile Include="Contactos.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
