--- a/RetoFinal/RetoFinal.csproj
+++ b/RetoFinal/RetoFinal.csproj
@@ -44,6 +44,7 @@
   <ItemGroup>
     <Compile Include="Agenda.cs" />
     <Compile Include="Contactos.cs" />
+    <Compile Include="ControlAgenda.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
